# treelix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  clipboard.rs  config.rs  editor.rs  git.rs  ipc.rs  keymap.rs  main.rs  marks.rs  theme.rs  ui_overlays.rs  watcher.rs
src/render/: builder.rs  decorators.rs  icons.rs  mod.rs
src/tree/: mod.rs  model.rs  node.rs  ops.rs
themes/: nord-aurora.toml
